gui-wl: Use pointer constraints for warping
This is a neat trick borrowed from Ethan Burns' proposed plan9port wayland
backend that warps the pointer by locking the cursor, setting a position
hint, and then unlocking the cursor.

It works across compositors, and allows us to drop the dependency on
wlroots protocols.

Also fixed bugs in previous commit for handling close and events on the
decor surfaces.

--- a/gui-wl/Makefile
+++ b/gui-wl/Makefile
@@ -3,33 +3,32 @@ include ../Make.config
 LIB=libgui.a
 
 PROTO_DIR=`pkg-config --variable=pkgdatadir wayland-protocols`
-WLR_DIR=`pkg-config --variable=pkgdatadir wlr-protocols`
 XDG_SHELL=$(PROTO_DIR)/stable/xdg-shell/xdg-shell.xml
 XDG_DECO=$(PROTO_DIR)/unstable/xdg-decoration/xdg-decoration-unstable-v1.xml
 XDG_PRIMSEL=$(PROTO_DIR)/unstable/primary-selection/primary-selection-unstable-v1.xml
-WLR_VIRTUAL_POINTER=$(WLR_DIR)/unstable/wlr-virtual-pointer-unstable-v1.xml
+WP_POINTER_CONSTRAINTS=$(PROTO_DIR)/unstable/pointer-constraints/pointer-constraints-unstable-v1.xml
 
 HFILES=\
 	xdg-shell-protocol.h\
 	xdg-decoration-protocol.h\
 	xdg-primary-selection-protocol.h\
-	wlr-virtual-pointer.h\
+	wp-pointer-constraints.h\
 	wl-inc.h\
 
 OFILES=\
 	xdg-shell-protocol.$O\
 	xdg-decoration-protocol.$O\
 	xdg-primary-selection-protocol.$O\
-	wlr-virtual-pointer.$O\
+	wp-pointer-constraints.$O\
 	wl-cb.$O\
 	wl-screen.$O\
 	wl-util.$O\
 
-wlr-virtual-pointer.c: 
-	wayland-scanner private-code < $(WLR_VIRTUAL_POINTER) > $@ || { rm -f $@; exit 1; }
+wp-pointer-constraints.c:
+	wayland-scanner private-code < $(WP_POINTER_CONSTRAINTS) > $@ || { rm -f $@; exit 1; }
 
-wlr-virtual-pointer.h: 
-	wayland-scanner client-header < $(WLR_VIRTUAL_POINTER) > $@ || { rm -f $@; exit 1; }
+wp-pointer-constraints.h:
+	wayland-scanner client-header < $(WP_POINTER_CONSTRAINTS) > $@ || { rm -f $@; exit 1; }
 
 xdg-shell-protocol.c:
 	wayland-scanner private-code < $(XDG_SHELL) > $@ || { rm -f $@; exit 1; }
