exportfs: backport updated exportfs from 9front
This has some improvements for handling the processes
and handles flushes properly.

--- a/exportfs/Makefile
+++ b/exportfs/Makefile
@@ -2,9 +2,12 @@ ROOT=..
 include ../Make.config
 LIB=libexportfs.a
 
+HFILES=exportfs.h
+
 OFILES=\
 	exportfs.$O\
-	exportsrv.$O
+	exportsrv.$O\
+	io.$O\
 
 default: $(LIB)
 $(LIB): $(OFILES)
